# src/slip-box/responses/delete-card.response.ts
@@ -1,0 +1,6 @@
+import { ApiProperty } from "@nestjs/swagger";
+
+export class DeleteCardResponse {
+    @ApiProperty({ description: '被删除的标签们的id', type: Number, isArray: true })
+    deletedTagIds: number[]
+}
